Fix background image not showing
- I've been adding the wrong file over and over
- coffee applied

--- a/j/style.css
+++ b/j/style.css
@@ -1,6 +1,10 @@
 body {
 	background-image: url(https://images.unsplash.com/photo-1444090542259-0af8fa96557e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
+	background-position: fixed;
 	background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
 
 .container {
